fixing collapse button

--- a/pages/data/data.module.css
+++ b/pages/data/data.module.css
@@ -21,6 +21,7 @@
     border: 1px transparent;
     padding: 0;
     margin-top: 60px;
+    transition:left,right,293ms;
 }
 
 .content-data {
